--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,63 +1,200 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Quicksand&family=Righteous&family=Skranji:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500&display=swap');
 
-#logoGym {
-    width: 200px;
+*{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+    font-family:"Josefin Sans", sans-serif;
 }
 
-#logoCodoCodo {
-    width: 100px;    
+/*Barra de navegacion*/
+
+nav{
+    background: #191825;
+    height: 80px;
+    width: 100%;
+    position: fixed;
+}
+.enlace{
+    position: absolute;
+    padding: 15px 50px;
+}
+.logo{
+    height: 50px;
+}
+nav ul{
+    float: right;
+    margin-right: 20px;
+}
+nav ul li{
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
+nav ul li a{
+    color: #FFA3FD;
+    font-size: 18px;
+    padding: 7px 13px;
+    border-radius: 3px;
+    text-transform: uppercase;
+}
+li a.active, li a:hover{
+    color: #865DFF;
+    transition: .5s;
+}
+.checkbtn{
+    font-size: 30px;
+    color: #fff;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+#check{
+    display: none;
+}
+
+/*Cuerpo de la página*/
+
+section {
+    background: url(../img/fondoIndex.png) no-repeat;    
+    background-size: cover;
+    background-position: center center;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .cuerpo {
-    width: 500px;
-    height: 850px;    
+    text-align: center;
 }
 
-body {
-    margin: 0;
-    width: 100%;
-    min-height: 500px;
+.cuerpo h2 {
+    color: #865DFF;
 }
+
 
 #slogan {
-    width: 200%;    
+    width: 30rem;
 }
-  
-header,
-footer {
+
+/*Pie de Pagina*/
+.pie-pagina{
+    width: 100%;
+    height: 100%;
     background-color: #191825;
-    color: #fff;    
-    font-family: 'Josefin Sans', sans-serif;
 }
-
-main {
-    background-color: #865dff62;
-    color: #191825;
+.pie-pagina .grupo-1{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap:90px;
+    padding: 45px 0px;
 }
-
-#cel {
-    width: 60px;
-    position: fixed;
-    bottom: 100px;
-    right: 100px;
-}
-
-video {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;    
-    z-index: -1;
-}
-
-.navegador {
+.pie-pagina .grupo-1 .box figure{
+    width: 100%;
+    height: 100%;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+}
+.pie-pagina .grupo-1 .box figure img{
+    width: 250px;
+}
+.pie-pagina .grupo-1 .box h2{
+    color: #E384FF;
+    margin-bottom: 25px;
+    font-size: 20px;    
+}
+.pie-pagina .grupo-1 .box p{
+    color: #FFA3FD;
+    margin-bottom: 10px;
+    font-family:"Quicksand", sans-serif;
+    text-align: justify;
+}
+.pie-pagina .grupo-1 .red-social a{
+    display: inline-block;
+    text-decoration: none;
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    color: #fff;
+    margin-right: 10px;
+    background-color: #0d2033;
+    text-align: center;
+    transition: all 300ms ease;
+}
+.pie-pagina .grupo-1 .red-social a:hover{
+    color: #865DFF;
+}
+.pie-pagina .grupo-2{
+    background-color: #0a1a2a;    
+    padding: 15px 10px;
+    text-align: center;
+    color: #fff;
+}
+.pie-pagina .grupo-2 small{
+    font-size: 15px;
+    font-family:"Quicksand", sans-serif;
+} 
+
+
+@media screen and (min-width: 600px) and (max-width: 1024px){ /*TABLETS*/
+    .enlace{
+        padding-left: 20px;
+    }
+    nav ul li a{
+        font-size: 13px;
+    }
+    .pie-pagina .grupo-1{
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap:50px;
+        padding: 25px 0px;
+    }
 }
 
-.menu {
-    font-size: 60px;
-    color: #fff;
-    margin: 50px;    
+@media screen and (max-width: 600px){ /*CELULARES*/
+    .checkbtn{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        min-height: 100%;
+        background: #2c3e50;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;        
+    }
+    nav ul li a{
+        font-size: 20px;
+    }
+    li a:hover, li a.active{
+        background: none;
+        color: #865DFF;
+    }
+    #check:checked ~ ul{     
+        
+        left: 0;
+    }
+    .pie-pagina .grupo-1{
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap:30px;
+        padding: 15px 0px;
+    }
 }
