--- a/CSS/registro.css
+++ b/CSS/registro.css
@@ -223,6 +223,10 @@ main{
     font-family:"Quicksand", sans-serif;
 } 
 
+.pie-pagina h2 {
+    font-family:"Josefin Sans", sans-serif;
+}
+
 
 
 /* ----------mediaqueries de body------------ */
