--- a/CSS/quienes-somos.css
+++ b/CSS/quienes-somos.css
@@ -3,6 +3,7 @@
 *{
     margin: 0;
     padding: 0;
+    text-decoration: none;
     font-family: "Quicksand", sans-serif;
 }
 /*Barra de navegacion*/
@@ -15,6 +16,11 @@ nav{
     width: 100%;
     position: relative;
 }
+
+nav a{
+    font-family:"Josefin Sans", sans-serif;
+}
+
 .enlace{
     position: absolute;
     padding: 15px 50px;
